# (c) 2011 Mandriva, http://www.mandriva.com
#
# $Id$
#
# This file is part of Mandriva Management Console (MMC).
#
# MMC is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# MMC is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with MMC.  If not, see <http://www.gnu.org/licenses/>.
#
# Author(s)
#   Jean Parpaillon <jparpaillon@mandriva.com>
#
contribdir = $(datadir)/doc/mmc/contrib

nobase_dist_contrib_DATA = audit/sql/install.sh \
						  audit/sql/schema-2.sql \
						  monit/mmc-agent \
						  scripts/mmc-check-expired-passwords-example \
						  scripts/mmc-check-users-primary-group \
						  scripts/usertoken-example \
						  base/mmc.schema \
						  base/nsswitch.conf \
						  base/pam_ldap.conf \
						  base/slapd.conf \
						  ppolicy/ppolicy.schema
