# (c) 2011 Mandriva, http://www.mandriva.com
#
# $Id$
#
# This file is part of Mandriva Pulse2 project.
#
# This software is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This software is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this software.  If not, see <http://www.gnu.org/licenses/>.
#
# Author(s):
#   Jean Parpaillon <jparpaillon@mandriva.com>
#
man_MANS = \
	pulse2-imaging-server.1 \
	pulse2-inventory-clean-database.1 \
	pulse2-inventory-server.1 \
	pulse2-launcher.1 \
	pulse2-launchers-manager.1 \
	pulse2-msc-clean-database.1 \
	pulse2-output-wrapper.1 \
	pulse2-package-server.1 \
	pulse2-package-server-register-imaging.1 \
	pulse2-ping.1 \
	pulse2-scheduler.1 \
	pulse2-scheduler-manager.1 \
	pulse2-tcp-sproxy.1 \
	pulse2-wol.1
