# (c) 2013 Mandriva, http://www.mandriva.com
#
# This file is part of Mandriva Pulse2 project.
#
# This software is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This software is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this software.  If not, see <http://www.gnu.org/licenses/>.

contribdir = $(datadir)/doc/mmc/contrib
qactionsdir = $(localstatedir)/lib/pulse2/qactions

dist_qactions_DATA = msc/qactions/001reboot.msc \
	msc/qactions/002shutdown.msc \
	msc/qactions/006run_inventory_win32.msc \
	msc/qactions/007wake_on_lan.msc \
	msc/qactions/008remote_desktop_without_approval.msc \
	msc/qactions/009remote_desktop_with_approval.msc \
	msc/qactions/010wol_with_imaging.msc \
	msc/qactions/011windows_update.msc

nobase_dist_contrib_DATA = dyngroup/sql/clean-db.sql \
	dyngroup/sql/schema-001.sql \
	dyngroup/sql/schema-002.sql \
	dyngroup/sql/schema-003.sql \
	dyngroup/sql/schema-004.sql \
	dyngroup/sql/schema-005.sql \
	imaging-server/README.dhcpd.conf \
	imaging-server/README.exports \
	imaging-server/README.pci.ids \
	imaging-server/README.tftp-server \
	imaging-server/atftpd.default \
	imaging-server/dhcpd.conf \
	imaging-server/exports \
	imaging-server/pci.ids \
	imaging/lrsgznbd/lrsgznbd.c \
	imaging/lrsgznbd/lrsgznbd.sh \
	imaging/revadmin/getID.c \
	imaging/revadmin/gethwinfo.c \
	imaging/skel/COPYNUM \
	imaging/skel/header.lst \
	imaging/skel/symlinks \
	imaging/sql/README \
	imaging/sql/schema-001.sql \
	imaging/sql/schema-002.sql \
	imaging/sql/schema-003.sql \
	imaging/sql/schema-004.sql \
	imaging/sql/schema-005.sql \
	imaging/sql/schema-006.sql \
	imaging/sql/schema-007.sql \
	imaging/sql/schema-008.sql \
	imaging/sql/schema-009.sql \
	imaging/sysprep/sysprep-domain.inf \
	imaging/sysprep/sysprep-name.inf \
	imaging/sysprep/sysprep-wg.inf \
	imaging/template/COPYNUM \
	imaging/template/header.lst \
	inventory/README \
	inventory/lrs-to-pulse2-inventory \
	inventory/pulse2-inventory-clean-database.README \
	inventory/sql/schema-001.sql \
	inventory/sql/schema-002.sql \
	inventory/sql/schema-003.sql \
	inventory/sql/schema-004.sql \
	inventory/sql/schema-005.sql \
	inventory/sql/schema-006.sql \
	inventory/sql/schema-007.sql \
	inventory/sql/schema-008.sql \
	inventory/sql/schema-009.sql \
	inventory/sql/schema-010.sql \
	inventory/sql/schema-011.sql \
	inventory/sql/schema-012.sql \
	inventory/pulse2-inventory-manage-entities \
	inventory/pulse2-inventory-populate-root-entity.py \
	inventory/pulse2-inventory-purge-from-date \
	msc/analysis/command_evolution_using_logs.py \
	msc/analysis/scheduler_health_using_logs.py \
	msc/analysis/command_evolution_from_coh_table.py \
	msc/analysis/command_evolution_from_history_table.py \
	msc/analysis/pulse2_stats.py \
	msc/pulse2-msc-clean-database.README \
	msc/sql/README \
	msc/sql/clean-db.sql \
	msc/sql/purge-old-rows.sql \
	msc/sql/schema-001.sql \
	msc/sql/schema-002.sql \
	msc/sql/schema-003.sql \
	msc/sql/schema-004.sql \
	msc/sql/schema-005.sql \
	msc/sql/schema-006.sql \
	msc/sql/schema-007.sql \
	msc/sql/schema-008.sql \
	msc/sql/schema-009.sql \
	msc/sql/schema-010.sql \
	msc/sql/schema-011.sql \
	msc/sql/schema-012.sql \
	msc/sql/schema-013.sql \
	msc/sql/schema-014.sql \
	msc/sql/schema-015.sql \
	msc/sql/schema-016.sql \
	msc/sql/schema-017.sql \
	msc/sql/schema-018.sql \
	msc/sql/schema-019.sql \
	msc/sql/schema-020.sql \
	msc/sql/schema-021.sql \
	msc/sql/schema-022.sql \
	msc/sql/schema-023.sql \
	msc/sql/schema-024.sql \
	msc/sql/schema-025.sql \
	msc/qactions/101mdv_test_utf8.msc \
	msc/qactions/102mdv_test_blocking.msc \
	msc/qactions/103mdv_test_demux.msc \
	msc/qactions/104mdv_test_sleep_1minute.msc \
	package-server/some_examples/ff02000009/conf.xml \
	package-server/some_examples/ff02000009/install.bat \
	package-server/some_examples/ff02000012/conf.xml \
	package-server/some_examples/ff02000012/install.bat \
	package-server/some_examples/ff02000016/conf.xml \
	package-server/some_examples/ff02000016/install.bat \
	package-server/some_examples/ff030001/conf.xml \
	package-server/some_examples/ff030001/install.bat \
	package-server/some_examples/nvu0100/conf.xml \
	package-server/some_examples/nvu0100/install.bat \
	package-server/some_examples/ooo02000000/install.bat \
	package-server/some_examples/ooo02030000/install.bat \
	package-server/some_examples/summon-dummy-packages.sh \
	package-server/some_examples/summon-dummy-packages.xml \
	package-server/some_examples/tb02000009/conf.xml \
	package-server/some_examples/tb02000009/install.bat \
	package-server/some_examples/tb02000012/conf.xml \
	package-server/some_examples/tb02000012/install.bat \
	package-server/some_examples/tb02000016/conf.xml \
	package-server/some_examples/tb02000016/install.bat \
	package-server/some_examples/wscp0308beta/conf.xml \
	package-server/some_examples/wscp0308beta/install.bat \
	package-server/some_examples/download-firefox-setup.sh \
	package-server/some_examples/download-thunderbird-setup.sh \
	package-server/tests/pserver-max-dl \
	package-server/tests/pserver-max-tcp-conn \
	package-server/tests/pserver-plist \
	pulse2/sql/README \
	pulse2/sql/schema-001.sql \
	backuppc/sql/README \
	backuppc/sql/schema-001.sql \
	update/sql/README \
	update/sql/schema-001.sql \
	update/sql/schema-002.sql \
	monit/pulse2 \
	test-xmlrpc.php \
	test-xmlrpc.examples \
	test-xmlrpc.py
