# (c) 2013 Mandriva, http://www.mandriva.com
#
# This file is part of Mandriva Pulse2 project.
#
# This software is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This software is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this software.  If not, see <http://www.gnu.org/licenses/>.

contribdir = $(datadir)/doc/pulse2/contrib
qactionsdir = $(localstatedir)/lib/pulse2/qactions

dist_qactions_DATA = msc/qactions/001reboot.msc \
	msc/qactions/002shutdown.msc \
	msc/qactions/006run_inventory_win32.msc \
	msc/qactions/007wake_on_lan.msc \
	msc/qactions/008remote_desktop_without_approval.msc \
	msc/qactions/009remote_desktop_with_approval.msc \
	msc/qactions/010wol_with_imaging.msc \
	msc/qactions/011windows_update.msc

nobase_dist_contrib_DATA = dyngroup/sql/clean-db.sql \
	admin/sql/schema-001.sql \
	admin/sql/schema-002.sql \
	admin/sql/schema-003.sql \
	dyngroup/sql/schema-001.sql \
	dyngroup/sql/schema-002.sql \
	dyngroup/sql/schema-003.sql \
	dyngroup/sql/schema-004.sql \
	dyngroup/sql/schema-005.sql \
	dyngroup/sql/schema-006.sql \
	imaging-server/README.dhcpd.conf \
	imaging-server/README.exports \
	imaging-server/README.pci.ids \
	imaging-server/README.tftp-server \
	imaging-server/atftpd.default \
	imaging-server/dhcpd.conf \
	imaging-server/exports \
	imaging-server/pci.ids \
	imaging/lrsgznbd/lrsgznbd.c \
	imaging/lrsgznbd/lrsgznbd.sh \
	imaging/revadmin/getID.c \
	imaging/revadmin/gethwinfo.c \
	imaging/skel/COPYNUM \
	imaging/skel/header.lst \
	imaging/skel/symlinks \
	imaging/sql/README \
	imaging/sql/synch-localglpi-to-imaging.sql \
	imaging/sql/synch-remoteglpi-to-imaging.sql.in \
	imaging/sql/schema-001.sql \
	imaging/sql/schema-002.sql \
	imaging/sql/schema-003.sql \
	imaging/sql/schema-004.sql \
	imaging/sql/schema-005.sql \
	imaging/sql/schema-006.sql \
	imaging/sql/schema-007.sql \
	imaging/sql/schema-008.sql \
	imaging/sql/schema-009.sql \
	imaging/sql/schema-010.sql \
	imaging/sql/schema-011.sql \
	imaging/sql/schema-012.sql \
	imaging/sql/schema-013.sql \
	imaging/sql/schema-014.sql \
	imaging/sql/schema-015.sql \
	imaging/sql/schema-016.sql \
	imaging/sql/schema-017.sql \
	imaging/sql/schema-019.sql \
	imaging/sql/schema-020.sql \
	imaging/sql/schema-021.sql \
	imaging/sql/schema-022.sql \
	imaging/sql/schema-023.sql \
	imaging/sql/schema-024.sql \
	imaging/sql/schema-025.sql \
	imaging/sql/schema-026.sql \
	imaging/sql/schema-027.sql \
	imaging/sysprep/sysprep-domain.inf \
	imaging/sysprep/sysprep-name.inf \
	imaging/sysprep/sysprep-wg.inf \
	imaging/template/COPYNUM \
	imaging/template/header.lst \
	imaging/template/utilities.menu.in \
	inventory/README \
	inventory/lrs-to-pulse2-inventory \
	inventory/pulse2-inventory-clean-database.README \
	inventory/sql/schema-001.sql \
	inventory/sql/schema-002.sql \
	inventory/sql/schema-003.sql \
	inventory/sql/schema-004.sql \
	inventory/sql/schema-005.sql \
	inventory/sql/schema-006.sql \
	inventory/sql/schema-007.sql \
	inventory/sql/schema-008.sql \
	inventory/sql/schema-009.sql \
	inventory/sql/schema-010.sql \
	inventory/sql/schema-011.sql \
	inventory/sql/schema-012.sql \
	inventory/sql/schema-013.sql \
	inventory/sql/schema-014.sql \
	inventory/sql/schema-015.sql \
	inventory/pulse2-inventory-manage-entities \
	inventory/pulse2-inventory-populate-root-entity.py \
	inventory/pulse2-inventory-purge-from-date \
	msc/analysis/command_evolution_using_logs.py \
	msc/analysis/scheduler_health_using_logs.py \
	msc/analysis/command_evolution_from_coh_table.py \
	msc/analysis/command_evolution_from_history_table.py \
	msc/analysis/pulse2_stats.py \
	msc/pulse2-msc-clean-database.README \
	msc/sql/README \
	msc/sql/clean-db.sql \
	msc/sql/purge-old-rows.sql \
	msc/sql/synch-localglpi-to-msc.sql \
	msc/sql/synch-remoteglpi-to-msc.sql.in \
	msc/sql/schema-001.sql \
	msc/sql/schema-002.sql \
	msc/sql/schema-003.sql \
	msc/sql/schema-004.sql \
	msc/sql/schema-005.sql \
	msc/sql/schema-006.sql \
	msc/sql/schema-007.sql \
	msc/sql/schema-008.sql \
	msc/sql/schema-009.sql \
	msc/sql/schema-010.sql \
	msc/sql/schema-011.sql \
	msc/sql/schema-012.sql \
	msc/sql/schema-013.sql \
	msc/sql/schema-014.sql \
	msc/sql/schema-015.sql \
	msc/sql/schema-016.sql \
	msc/sql/schema-017.sql \
	msc/sql/schema-018.sql \
	msc/sql/schema-019.sql \
	msc/sql/schema-020.sql \
	msc/sql/schema-021.sql \
	msc/sql/schema-022.sql \
	msc/sql/schema-023.sql \
	msc/sql/schema-024.sql \
	msc/sql/schema-025.sql \
	msc/sql/schema-026.sql \
	msc/sql/schema-027.sql \
	msc/sql/schema-028.sql \
	msc/sql/schema-029.sql \
	msc/sql/schema-030.sql \
	msc/sql/schema-031.sql \
	msc/sql/schema-032.sql \
	msc/qactions/101mdv_test_utf8.msc \
	msc/qactions/102mdv_test_blocking.msc \
	msc/qactions/103mdv_test_demux.msc \
	msc/qactions/104mdv_test_sleep_1minute.msc \
	package-server/tests/pserver-max-dl \
	package-server/tests/pserver-max-tcp-conn \
	package-server/tests/pserver-plist \
	pulse2/sql/README \
	pulse2/sql/schema-001.sql \
	backuppc/sql/README \
	backuppc/sql/schema-001.sql \
	backuppc/sql/schema-002.sql \
	backuppc/sql/schema-003.sql \
	backuppc/sql/schema-004.sql \
	backuppc/sql/schema-005.sql \
	backuppc/sql/schema-006.sql \
	backuppc/sql/schema-007.sql \
	update/sql/README \
	update/sql/schema-001.sql \
	update/sql/schema-002.sql \
	update/sql/schema-003.sql \
	update/sql/schema-004.sql \
	update/sql/schema-005.sql \
	update/sql/schema-006.sql \
	update/sql/schema-007.sql \
	xmppmaster/sql/schema-001.sql \
	xmppmaster/sql/schema-002.sql \
	xmppmaster/sql/schema-003.sql \
	xmppmaster/sql/schema-004.sql \
	xmppmaster/sql/schema-005.sql \
	xmppmaster/sql/schema-006.sql \
	xmppmaster/sql/schema-007.sql \
	xmppmaster/sql/schema-008.sql \
	xmppmaster/sql/schema-009.sql \
	xmppmaster/sql/schema-010.sql \
	xmppmaster/sql/schema-011.sql \
	xmppmaster/sql/schema-012.sql \
	xmppmaster/sql/schema-013.sql \
	xmppmaster/sql/schema-014.sql \
	xmppmaster/sql/schema-015.sql \
	xmppmaster/sql/schema-016.sql \
	xmppmaster/sql/schema-017.sql \
	xmppmaster/sql/schema-018.sql \
	xmppmaster/sql/schema-019.sql \
	xmppmaster/sql/schema-020.sql \
	xmppmaster/sql/schema-021.sql \
	xmppmaster/sql/schema-022.sql \
	xmppmaster/sql/schema-023.sql \
	xmppmaster/sql/schema-024.sql \
	xmppmaster/sql/schema-025.sql \
	xmppmaster/sql/schema-026.sql \
	xmppmaster/sql/schema-027.sql \
	xmppmaster/sql/schema-028.sql \
	xmppmaster/sql/schema-029.sql \
	xmppmaster/sql/schema-030.sql \
	xmppmaster/sql/schema-031.sql \
	xmppmaster/sql/schema-032.sql \
	xmppmaster/sql/schema-033.sql \
	xmppmaster/sql/schema-034.sql \
	xmppmaster/sql/schema-035.sql \
	xmppmaster/sql/schema-036.sql \
	xmppmaster/sql/schema-037.sql \
	xmppmaster/sql/schema-038.sql \
	xmppmaster/sql/schema-039.sql \
	xmppmaster/sql/schema-040.sql \
	xmppmaster/sql/schema-041.sql \
	xmppmaster/sql/schema-042.sql \
	xmppmaster/sql/schema-043.sql \
	xmppmaster/sql/schema-044.sql \
	xmppmaster/sql/schema-045.sql \
	xmppmaster/sql/schema-046.sql \
	xmppmaster/sql/schema-047.sql \
	xmppmaster/sql/schema-048.sql \
	xmppmaster/sql/schema-049.sql \
	xmppmaster/sql/schema-050.sql \
	xmppmaster/sql/schema-051.sql \
	xmppmaster/sql/schema-052.sql \
	xmppmaster/sql/schema-053.sql \
	xmppmaster/sql/schema-054.sql \
	xmppmaster/sql/schema-055.sql \
	xmppmaster/sql/schema-056.sql \
	xmppmaster/sql/schema-057.sql \
	xmppmaster/sql/schema-058.sql \
	xmppmaster/sql/schema-059.sql \
	xmppmaster/sql/schema-061.sql \
	xmppmaster/sql/schema-062.sql \
	xmppmaster/sql/schema-063.sql \
	xmppmaster/sql/schema-064.sql \
	xmppmaster/sql/schema-065.sql \
	xmppmaster/sql/schema-066.sql \
	xmppmaster/sql/schema-067.sql \
	xmppmaster/sql/schema-068.sql \
	xmppmaster/sql/schema-069.sql \
	xmppmaster/sql/schema-070.sql \
	xmppmaster/sql/schema-071.sql \
	xmppmaster/sql/schema-072.sql \
	xmppmaster/sql/schema-073.sql \
	xmppmaster/sql/schema-074.sql \
	xmppmaster/sql/schema-075.sql \
	xmppmaster/sql/schema-076.sql \
	xmppmaster/sql/schema-077.sql \
	xmppmaster/sql/schema-078.sql \
	xmppmaster/sql/schema-079.sql \
	xmppmaster/sql/schema-080.sql \
	xmppmaster/sql/schema-081.sql \
	xmppmaster/sql/schema-082.sql \
	xmppmaster/sql/schema-083.sql \
	xmppmaster/sql/schema-084.sql \
	xmppmaster/sql/schema-085.sql \
	xmppmaster/sql/schema-086.sql \
	xmppmaster/sql/schema-087.sql \
	xmppmaster/sql/schema-088.sql \
	xmppmaster/sql/schema-089.sql \
	xmppmaster/sql/schema-090.sql \
	kiosk/sql/schema-001.sql \
	kiosk/sql/schema-002.sql \
	kiosk/sql/schema-003.sql \
	kiosk/sql/schema-004.sql \
	kiosk/sql/schema-005.sql \
	kiosk/sql/schema-006.sql \
	kiosk/sql/schema-007.sql \
	kiosk/sql/schema-008.sql \
	pkgs/sql/schema-001.sql \
	pkgs/sql/schema-002.sql \
	pkgs/sql/schema-003.sql \
	pkgs/sql/schema-004.sql \
	pkgs/sql/schema-005.sql \
	pkgs/sql/schema-006.sql \
	pkgs/sql/schema-007.sql \
	pkgs/sql/schema-008.sql \
	pkgs/sql/schema-009.sql \
	updates/sql/schema-001.sql \
	urbackup/sql/schema-001.sql \
	monit/pulse2 \
	samba/smb.conf \
	test-xmlrpc.php \
	test-xmlrpc.examples \
	test-xmlrpc.py
