# (c) 2011 Mandriva, http://www.mandriva.com
#
# $Id$
#
# This file is part of Mandriva Pulse2 project.
#
# This software is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This software is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this software.  If not, see <http://www.gnu.org/licenses/>.
#
# Author(s):
#   Jean Parpaillon <jparpaillon@mandriva.com>
#
initscripts = pulse2-package-server pulse2-inventory-server pulse2-scheduler \
	pulse2-launchers pulse2-imaging-server

initsysdir = $(sysconfdir)/init.d/
initsys_SCRIPTS = $(initscripts)

CLEANFILES = $(initscripts)
EXTRA_DIST = $(patsubst %,%.in,$(initscripts))

edit = sed \
        -e 's|@bindir[@]|$(bindir)|g' \
        -e 's|@sbindir[@]|$(sbindir)|g' \
        -e 's|@pkgdatadir[@]|$(pkgdatadir)|g' \
        -e 's|@prefix[@]|$(prefix)|g' \
        -e 's|@sysconfdir[@]|$(sysconfdir)|g'

$(initscripts): Makefile
	rm -f $@ $@.tmp
	$(MKDIR_P) $(@D)
	srcdir=''; \
	  test -f ./$@.in || srcdir=$(srcdir)/; \
	  $(edit) $${srcdir}$@.in >$@.tmp
	mv $@.tmp $@

pulse2-package-server: pulse2-package-server.in
pulse2-inventory-server: pulse2-inventory-server.in
pulse2-scheduler: pulse2-scheduler.in
pulse2-launchers: pulse2-launchers.in
pulse2-imaging-server: pulse2-imaging-server.in
