# (c) 2011 Mandriva, http://www.mandriva.com
#
# $Id$
#
# This file is part of Mandriva Pulse2 project.
#
# This software is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This software is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this software.  If not, see <http://www.gnu.org/licenses/>.
#
# Author(s):
#   Jean Parpaillon <jparpaillon@mandriva.com>
#
sbin_PROGRAMS = pulse2-imaging-server

pulse2_imaging_server_SOURCES = dictionary.c dictionary.h \
	iniparser.c iniparser.h \
	pulse2-imaging-server.c pulse2-imaging-server.h \
	strlib.c strlib.h
pulse2_imaging_server_CFLAGS = -02 -Wall -Wextra -std=gnu99
